Nav Bar and Background Fixed

--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-length, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Aura Beatz</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <header>
     <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <ul>
+        <img class="logo" src="Screenshot 2024-12-01 205955-removebg-preview.jpg" alt="logo">
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="Musics.html">Musics</a></li>
+        <li><a href="Merry Christmas.html">Merry Christmas</a></a></li>
+        <li><a href="#">Home</a></li>
+      </ul>
     </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+  </header>
+</body>
+<video autoplay muted loop id="loop">
+  <source src="loop.mp4" type="video/mp4">
+</video>
 </html>
